--- a/app/src/main/res/layout/tab_venue.xml
+++ b/app/src/main/res/layout/tab_venue.xml
@@ -47,7 +47,8 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -207,7 +208,7 @@
 
     <com.google.android.gms.maps.MapView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/map"
+        android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
