--- a/app/src/main/res/layout/events_layout.xml
+++ b/app/src/main/res/layout/events_layout.xml
@@ -6,6 +6,16 @@
     android:layout_height="wrap_content"
     android:padding="2dp">
 
+    <TextView
+        android:id="@+id/no_favorite_message_in_recycler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:visibility="gone"
+        android:layout_marginTop="250dp"
+        android:layout_centerHorizontal="true"
+        android:text="no favorite" />
+
     <RelativeLayout
         android:id="@+id/eventitem"
         android:layout_width="match_parent"
