--- a/app/src/main/res/layout/tab_event.xml
+++ b/app/src/main/res/layout/tab_event.xml
@@ -59,8 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:padding="5dp"
-        >
+        android:padding="10dp">
 
         <TableRow
             android:id="@+id/event_artist_row"
