--- a/app/src/main/res/layout/photos_layout.xml
+++ b/app/src/main/res/layout/photos_layout.xml
@@ -7,5 +7,9 @@
     <ImageView
         android:id="@+id/artistphoto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:layout_margin="3dp"
+        />
 </LinearLayout>
