--- a/app/src/main/res/layout/tab_venue.xml
+++ b/app/src/main/res/layout/tab_venue.xml
@@ -203,8 +203,20 @@
     <com.google.android.gms.maps.MapView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/mapView"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="500dp" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:id="@+id/no_location_info"
+            android:visibility="gone"
+            android:text="no location info"/>
+
+
 
 </LinearLayout>
 </ScrollView>
