--- a/app/src/main/res/layout/tab_venue.xml
+++ b/app/src/main/res/layout/tab_venue.xml
@@ -59,142 +59,152 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:padding="2dp"
+        android:layout_margin="5dp"
         >
 
         <TableRow
             android:id="@+id/row_venue_name"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
                 android:textStyle="bold"
                 android:text="Name"/>
             <TextView
                 android:id="@+id/venue_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
 
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_address"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="Address"/>
             <TextView
                 android:id="@+id/venue_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_city"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="City"/>
             <TextView
                 android:id="@+id/venue_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_phone"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="2dp">
+            android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="Phone Number"/>
             <TextView
                 android:id="@+id/venue_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_hours"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp">
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="Open Hours"/>
             <TextView
                 android:id="@+id/venue_hours"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_rule"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp">
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="General Rule"/>
             <TextView
                 android:id="@+id/venue_rule"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
         <TableRow
             android:id="@+id/row_venue_child"
+            android:layout_margin="5dp"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp">
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
                 android:textStyle="bold"
                 android:text="Child Rule"/>
             <TextView
                 android:id="@+id/venue_child"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginEnd="10dp"
                 android:text=""/>
         </TableRow>
 
@@ -206,17 +216,6 @@
         android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="500dp" />
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:id="@+id/no_location_info"
-            android:visibility="gone"
-            android:text="no location info"/>
-
-
 
 </LinearLayout>
 </ScrollView>
