--- a/app/src/main/res/layout/events_layout.xml
+++ b/app/src/main/res/layout/events_layout.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:background="@drawable/event_border"
+    android:paddingHorizontal="2dp"
+    android:paddingVertical="6dp">
 
     <TextView
         android:id="@+id/no_favorite_message_in_recycler"
@@ -30,11 +32,16 @@
         android:scaleType="fitCenter"
         android:padding="10dp"/>
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/category"
+            android:layout_centerVertical="true">
+
     <TextView
         android:id="@+id/eventname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/category"
         android:text="@string/eventname"
         android:textStyle="bold"/>
 
@@ -62,6 +69,7 @@
         android:text="@string/time"
         android:layout_below="@+id/venuename"
         android:layout_marginLeft="10dp"/>
+        </RelativeLayout>
 
     </RelativeLayout>
 
